# rust-mandelbrot

./: package.json  vite.config.ts
mandelbrot/: Cargo.toml
mandelbrot/src/: lib.rs
src/: App.tsx  mandelbrot.ts
