[package]
edition = "2021"
name = "mandelbrot"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
image = "=0.22.0"
rayon = "1.8.1"
bumpalo = "=3.14.0"                                         # 解决版本依赖冲突
wasm-bindgen-rayon = { version = "1.2.1", optional = true }
wasm-bindgen = { version = "0.2.91" }

[features]
parallel = ["wasm-bindgen-rayon"]
